# pytqshacl

./: .gitignore  README.md  pyproject.toml  tasks.py
src/pytqshacl/: __init__.py  cli.py  config.py  run.py
src/pytqshacl/topquadrant/: install.py
test/: data.ttl  readme.md  shapes.ttl  test.py
