[project]
name = "pytqshacl"
dynamic = [ 'version']
description = "Python wrapper around TopQuadrant SHACL processor"
authors = [
    { name = "Majid alDosari", email = "majid.aldosari@pnnl.gov" },
    { name = "Majid alDosari", email = "majidaldosari-github@yahoo.com" }
]
dependencies = ["fire", "install-jdk"]
readme = "README.md"

[dependency-groups]
dev = [
    'pre-commit',
    "ipython", "ipdb",
    "fire",
    ]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.version]
path = "src/pytqshacl/__init__.py"
[tool.hatch.build.targets.sdist]
include = [
    'src/**/*.py',
    # run time install
    # otherwise would have to include .java, .properties, .jars
    ]
